# Purchases

./: .env.template  Makefile  docker-compose.yaml
backend/: Dockerfile  main.py  middleware.py  pyproject.toml  settings.py
backend/api/: __init__.py  items.py  orders.py  ping.py
backend/api/models/: orders.py
backend/database/: __init__.py  alembic.ini  connection.py
backend/database/alembic/: env.py
backend/database/alembic/versions/: 47a918d77fef_add_change_paid_type.py  53f954c371eb_add_paid_field.py  5db10db659fb_add_total_amount_to_order.py  984c6d05cc9c_add_relationships.py  98e1f5b80d80_add_orders_table.py  ca17860e0e51_change_to_null.py  ca55033b5d51_add_created_date_field.py  e78106967622_change_datetime_to_date.py
backend/database/models/: __init__.py  orders.py
backend/database/utils/: crud.py  items.py  orders.py
backend/utils/: jwt.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/assets/navBar/: index.tsx
frontend/src/pages/home/: functions.tsx  index.css  index.tsx  input_row.tsx  models.tsx
frontend/src/pages/home/items/: items_row.tsx  items_table.tsx
frontend/src/pages/home/orders/: orders_row.tsx  orders_table.tsx
frontend/src/pages/home/table/: items.tsx  orders.tsx
frontend/src/pages/home/table/common/: auto-patch-input.tsx  dropout-list.tsx  popup.tsx
frontend/src/pages/login/: index.css  index.tsx
frontend/src/pages/not-found/: index.css  index.tsx
nginx/: Dockerfile  default.conf
