[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "mypy>=1.16.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.9.1",
    "ruff>=0.11.13",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
]

[tool.mypy]
fast_module_lookup = true
exclude = [
    ".venv",
    ".ruff_cache",
]
plugins = ["pydantic.mypy"]
disable_error_code = ["prop-decorator"]

[tool.ruff.lint]
extend-select = ["I"]
